# esp-idf-lib

./: .ackrc  .astylerc  .clang-format  .cproject  .gitignore  .mdlrc  .mdlstyle.rb  .project  .readthedocs.yml  .rubocop.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  Gemfile  Makefile  Metadata.md  Porting.md  README.md  README.md.erb  Rakefile  groups.yml  persons.yml  sdkconfig  targets.yml
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  pr-labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  driver_request.md  driver_request.yml  misc_issue.yml
.github/workflows/: README.md  action-check-components-and-examples.yml  action-check-components-label.yml  actions-on-pr-by-label.yml  astyle.yml  build.yml  ci.yml  doc.yml  labeler-by-workflow-status.yml  labeler.yml  lint.yml  metadata.yml  pr-labeler.yml  pr-mention-owner.yml  release-drafter.yml
.main/: main.c
components/ads111x/: .eil.yml  CMakeLists.txt  LICENSE  ads111x.c  ads111x.h  component.mk
components/ads130e08/: .eil.yml  CMakeLists.txt  LICENSE  ads130e08.c  ads130e08.h  component.mk
components/ags10/: .eil.yml  CMakeLists.txt  LICENSE  ags10.c  ags10.h
components/aht/: .eil.yml  CMakeLists.txt  LICENSE  aht.c  aht.h
components/am2320/: .eil.yml  CMakeLists.txt  LICENSE  am2320.c  am2320.h
components/anemometer/: .eil.yml  CMakeLists.txt  LICENSE  anemometer.c  anemometer.h
components/bh1750/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  bh1750.c  bh1750.h  component.mk
components/bh1900nux/: .eil.yml  CMakeLists.txt  LICENSE  bh1900nux.c  bh1900nux.h
components/bme680/: .eil.yml  CMakeLists.txt  LICENSE  README.md  bme680.c  bme680.h
components/bmi160/: .eil.yml  CMakeLists.txt  LICENSE  README.md  bmi160.c  bmi160.h  bmi160_reg.h  component.mk
components/bmp180/: .eil.yml  CMakeLists.txt  LICENSE  bmp180.c  bmp180.h  component.mk
components/bmp280/: .eil.yml  CMakeLists.txt  LICENSE  bmp280.c  bmp280.h  component.mk
components/button/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  button.c  button.h  component.mk
components/calibration/: .eil.yml  CMakeLists.txt  calibration.c  calibration.h
components/ccs811/: .eil.yml  CMakeLists.txt  LICENSE  README.md  ccs811.c  ccs811.h
components/color/: .eil.yml  CMakeLists.txt  color.c  color.h  hsv.h  hsv2rgb.c  rgb.h
components/dht/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  dht.c  dht.h
components/dps310/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  component.mk
components/dps310/include/: dps310.h
components/dps310/priv_include/: helper_i2c.h  helper_macro.h
components/dps310/src/: dps310.c  helper_i2c.c
components/ds1302/: .eil.yml  CMakeLists.txt  LICENSE  ds1302.c  ds1302.h
components/ds1307/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  ds1307.c  ds1307.h
components/ds18x20/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  ds18x20.c  ds18x20.h
components/ds2438/: CMakeLists.txt  LICENSE  Readme.md  component.mk  ds2438.c  ds2438.h
components/ds3231/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  ds3231.c  ds3231.h
components/ds3502/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  ds3502.c  ds3502.h
components/encoder/: .eil.yml  CMakeLists.txt  Kconfig  component.mk  encoder.c  encoder.h
components/esp_idf_lib_helpers/: .eil.yml  CMakeLists.txt  component.mk  esp_idf_lib_helpers.h  ets_sys.h
components/example/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  example.c  example.h
components/framebuffer/: .eil.yml  CMakeLists.txt  component.mk  fbanimation.c  fbanimation.h  framebuffer.c  framebuffer.h
components/hd44780/: .eil.yml  CMakeLists.txt  component.mk  hd44780.c  hd44780.h
components/hdc1000/: .eil.yml  CMakeLists.txt  hdc1000.c  hdc1000.h
components/hmc5883l/: .eil.yml  CMakeLists.txt  Kconfig  component.mk  hmc5883l.c  hmc5883l.h
components/ht16k33/: .eil.yml  CMakeLists.txt  LICENSE  README.md  component.mk  ht16k33.c  ht16k33.h
components/hts221/: .eil.yml  CMakeLists.txt  LICENSE  README.md  component.mk  hts221.c  hts221.h
components/htu21d/: .eil.yml  (+4 more)
components/i2cdev/: .eil.yml  .i2cdev.h.swp  CMakeLists.txt  Kconfig  LICENSE  component.mk  i2cdev.c  i2cdev.h  i2cdev_legacy.c  i2cdev_legacy.h  i2cdev_lock.h  i2cdev_master.c  i2cdev_master.h
components/led_effect/: CMakeLists.txt  Kconfig  component.mk  crazybees.c  dna.c  fire.c  led_animation.c  led_animation.h  led_effect.c  led_effect.h  noise1.c  rainbow1.c  rays.c  sparkles1.c  waterfall.c
components/led_effect/effects/: crazybees.h  dna.h  fire.h  noise1.h  rainbow1.h  rays.h  sparkles1.h  waterfall.h
components/led_effect/led_effects/: crazybees.c  crazybees.h  dna.c  dna.h  noise1.c  noise1.h  plasma_waves.c  plasma_waves.h  rainbow1.c  rainbow1.h  rays.c  rays.h  waterfall.c  waterfall.h
components/led_strip_spi/: .eil.yml  CMakeLists.txt  Kconfig  LICENSE  README.md  component.mk  led_strip_spi.c  led_strip_spi.h  led_strip_spi_esp32.h  led_strip_spi_esp8266.h  led_strip_spi_sk9822.c  led_strip_spi_sk9822.h
components/mhz19b/: .eil.yml  CMakeLists.txt  LICENSE  README.md  mhz19b.c  mhz19b.h
components/ultrasonic/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  ultrasonic.c  ultrasonic.h
components/wiegand/: .eil.yml  CMakeLists.txt  LICENSE  component.mk  wiegand.c  wiegand.h
devtools/: Kconfig.i2c  README.md.erb  Rakefile  devtool.py  groups.yml  persons.yml  requirements.txt  rewrite_kconfig.rb  targets.yml
devtools/cmake-get-requires/: CMakeLists.txt
docs/: .gitignore  Makefile  doxygen.conf
examples/: .gitignore  onewire
examples/led_strip/led_effects/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c
examples/led_strip/led_effects/main/effects/: crazybees.h  dna.h  fire.c  fire.h  matrix.c  matrix.h  noise.c  noise.h  plasma_waves.c  rain.c  rain.h  rainbow.h  rays.c  sparkles.c
main/: main.c
spec/: component.rb  component_spec.rb  copyright.rb  group.rb  group_list.rb  groups_spec.rb  license.rb  metadata.rb  person.rb  person_list.rb  persons_spec.rb  spec_helper.rb  target.rb  target_list.rb  targets_spec.rb
(+1231 files in other folders)
