idf_component_register(
    SRCS main.c
         effects/crazybees.c
         effects/dna.c
         effects/fire.c
         effects/matrix.c
         effects/noise.c
         effects/plasma_waves.c
         effects/rain.c
         effects/rainbow.c
         effects/rays.c
         effects/sparkles.c
         effects/waterfall.c
    INCLUDE_DIRS .
)
